fixed overflow in ID tab

--- a/src/components/SingleVariable/single-variable.scss
+++ b/src/components/SingleVariable/single-variable.scss
@@ -12,6 +12,7 @@
         margin-top: 20px;
         border: 1px dotted grey;
         border-radius: 4px;
+        overflow: auto;
     }
     &__item {
         padding: 15px;
